[gd_scene load_steps=13 format=3 uid="uid://ddgmx5x6x7jtn"]

[ext_resource type="Script" path="res://core/enemy/atk_mode.gd" id="1_xxtdw"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BuHPattern.gd" id="2_gggf2"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternOne.gd" id="3_ivjuw"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BuHBulletProperties.gd" id="3_nxi7s"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BulletProps.gd" id="4_gbd1y"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BuHSpawnPoint.gd" id="5_kj3i6"]

[sub_resource type="Curve2D" id="Curve2D_3cuij"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_g5ybi"]
resource_name = "PatternOne"
script = ExtResource("3_ivjuw")
bullet = "1"
iterations = 100
follows_parent = false
forced_angle = 0.0
forced_target = NodePath("")
forced_pattern_lookat = true
cooldown_stasis = false
cooldown_spawn = 1.0
cooldown_shoot = 0.0
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
wait_latence = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
layer_nbr = 1
layer_cooldown_spawn = 0.0
layer_pos_offset = 0.0
layer_speed_offset = 0.0
layer_angle_offset = 0.0
r_randomisation_chances = 1.0
r_bullet_choice = ""
r_bullet_nbr_choice = ""
r_bullet_nbr_variation = Vector3(0, 0, 0)
r_pattern_angle_choice = ""
r_pattern_angle_variation = Vector3(0, 0, 0)
r_infinite_iter_chances = 0.0
r_iterations_choice = ""
r_iterations_variation = Vector3(0, 0, 0)
r_forced_angle_choice = ""
r_forced_angle_variation = Vector3(0, 0, 0)
r_forced_target_choice = []
r_stasis_chances = 0.0
r_cooldown_spawn_choice = ""
r_cooldown_spawn_variation = Vector3(0, 0, 0)
r_cooldown_shoot_choice = ""
r_cooldown_shoot_variation = Vector3(0, 0, 0)
r_cooldown_n_spawn_choice = ""
r_cooldown_n_spawn_variation = Vector3(0, 0, 0)
r_cooldown_n_shoot_choice = ""
r_cooldown_n_shoot_variation = Vector3(0, 0, 0)

[sub_resource type="Curve2D" id="Curve2D_0uxuv"]

[sub_resource type="Curve" id="Curve_x3rh3"]

[sub_resource type="Curve" id="Curve_b400i"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_ba47j"]
script = ExtResource("4_gbd1y")
speed = 100.0
scale = 1
angle = 0
groups = []
anim_idle_texture = "0"
anim_spawn_texture = ""
anim_waiting_texture = ""
anim_delete_texture = ""
anim_idle_collision = "0"
anim_spawn_collision = ""
anim_waiting_collision = ""
anim_delete_collision = ""
anim_idle_sfx = -1
anim_spawn_sfx = -1
anim_waiting_sfx = -1
anim_delete_sfx = -1
spec_bounces = 0
spec_no_collision = false
spec_modulate_loop = 0.0
spec_skew = 0.0
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_rotating_speed = 0.0
death_after_time = 30.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
a_direction_equation = ""
a_curve_movement = 0
a_speed_multiplier = SubResource("Curve_x3rh3")
a_speed_multi_iterations = 0
a_speed_multi_scale = 0.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0
homing_time_start = 0
homing_duration = 999
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_b400i")
scale_multi_scale = 1
r_randomisation_chances = 1.0
r_speed_choice = ""
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = ""
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = ""
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = ""
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = ""
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = ""
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = ""
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = ""
r_group_target_choice = ""
r_pos_target_choice = ""
r_steer_choice = ""
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = ""
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = ""
r_homing_dur_variation = Vector3(0, 0, 0)
r_beam_length_choice = ""
r_beam_length_variation = Vector3(0, 0, 0)
r_beam_bounce_choice = ""
r_beam_width_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[node name="AtkMode" type="Node"]
script = ExtResource("1_xxtdw")

[node name="Patterns" type="Node2D" parent="."]

[node name="SpawnPattern" type="Path2D" parent="Patterns"]
curve = SubResource("Curve2D_3cuij")
script = ExtResource("2_gggf2")
id = "one"
pattern = SubResource("NavigationPolygon_g5ybi")

[node name="Bullets" type="Node2D" parent="."]

[node name="BulletPattern" type="Path2D" parent="Bullets"]
curve = SubResource("Curve2D_0uxuv")
script = ExtResource("3_nxi7s")
id = "1"
props = SubResource("PackedDataContainer_ba47j")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint" type="Node2D" parent="SpawnPoints"]
script = ExtResource("5_kj3i6")
active = false
auto_pattern_id = "one"
shared_area_name = "0"
rotating_speed = 0.0
pool_amount = 50
auto_start_on_cam = true
auto_start_after_time = 0.0
auto_start_at_distance = 5.0
auto_distance_from = NodePath("")
trigger_container = NodePath("")
